grover_3_Qubits.ipynb

--- a/grover_3_Qubits.ipynb
+++ b/grover_3_Qubits.ipynb
@@ -508,7 +508,7 @@
    "metadata": {},
    "source": [
     "## 3.2 Zweite Iteration ##\n",
-    "Nach der zweiten Iteration erhält man mit einer sehr hohen Wahrscheinlichkeit, nämlich rund 94,5 %  (121/128 entspricht ca. 94,5%), das gesuchte Ergebnis. Damit ist das Optimum für die höchstmögliche Erfolgswahrscheinlichkeit für das richtige Ergebnis bei der Durchführung des Grover Algorithmus mit drei Qubits erreicht."
+    "Nach der zweiten Iteration erhält man mit einer sehr hohen Wahrscheinlichkeit, nämlich rund 94,5 %  (121/128 entspricht ca. 94,5%), das gesuchte Ergebnis. Damit ist das Optimum für die höchstmögliche Erfolgswahrscheinlichkeit für das richtige Ergebnis bei der Durchführung des Grover-Algorithmus mit drei Qubits erreicht."
    ]
   },
   {
